--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Project": {
     "ConnectionString": "Data Source=DESKTOP-IF6BTUM\\SQLEXPRESS; Database=MyCompany; Persist Security Info-false; User ID-`sa2`; Password-`sa`; MultipleActiveResultSets=True; Trusted_Connection=False;",
-    "CompanyName": "Моя супер компания",
+    "CompanyName": "РњРѕСЏ СЃСѓРїРµСЂ РєРѕРјРїР°РЅРёСЏ",
     "CompanyPhone": "+7 (111) 111-11-11",
     "CompanyPhoneShort": "+71111111111",
     "CompanyEmail": "contact@mycompany.com"
